--- a/Calc/index.html
+++ b/Calc/index.html
@@ -8,37 +8,38 @@
 </head>
 <body>
       <div class="calculator">
-        <input type="text" placeholder="0">
+        <input type="text" placeholder="0" id="inputbox">
         <div>
-            <button>AC</button>
-            <button>()</button>
-            <button>%</button>
-            <button>/</button>
+            <button class="operator">AC</button>
+            <button class="operator">DEL</button>
+            <button class="operator">%</button>
+            <button class="operator">/</button>
         </div>
         <div>
             <button>7</button>
             <button>8</button>
             <button>9</button>
-            <button>x</button>
+            <button class="operator">*</button>
         </div>
         <div>
             <button>4</button>
             <button>5</button>
             <button>6</button>
-            <button>-</button>
+            <button class="operator">-</button>
         </div>
         <div>
             <button>1</button>
             <button>2</button>
             <button>3</button>
-            <button>+</button>
+            <button class="operator">+</button>
         </div>
         <div>
             <button>00</button>
             <button>0</button>
             <button>.</button>
-            <button>=</button>
+            <button class="equalsign">=</button>
         </div>
       </div>
+      <script src="script.js"></script>
 </body>
 </html>
